force-app/main/default/objects/clofor_com_cfs__Energy_Audit__c/fields/clofor_com_cfs__Account__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account</relationshipLabel>
    <relationshipName>Energy_Audit</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>