force-app/main/default/objects/clofor_com_cfs__Energy_Audit__c/fields/clofor_com_cfs__Audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Audit_Notes__c</fullName>
    <label>Audit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>