force-app/main/default/objects/clofor_com_cfs__Energy_Audit__c/fields/clofor_com_cfs__Mode_of_Installing__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mode_of_Installing__c</fullName>
    <label>Type of Installation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rooftop</fullName>
                <default>true</default>
                <label>Rooftop</label>
            </value>
            <value>
                <fullName>Carport</fullName>
            </value>
            <value>
                <fullName>Ground mounted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>